test/DaedalusCompiler.Tests/SemanticErrors/BaseSemanticErrorsTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class BaseSemanticErrorsTests
    {
        
    }
}